@@ -202,7 +202,12 @@ show_debug_linux_nat (struct ui_file *file, int from_tty,
 /* Print a linux-nat debug statement.  */
 
 #define linux_nat_debug_printf(fmt, ...) \
-  debug_prefixed_printf ("linux-nat", __func__, fmt, ##__VA_ARGS__)
+  do \
+    { \
+      if (debug_linux_nat) \
+	debug_prefixed_printf ("linux-nat", __func__, fmt, ##__VA_ARGS__); \
+    } \
+  while (0)
 
 struct simple_pid_list
 {
